# pullora

./: .gitignore  AI_AGENT_ROADMAP.md  DESIGN_ROADMAP.md  FEATURE_ROADMAP.md  README.md  ROADMAP.md  STORE_ROADMAP.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
docs/: DESIGN_GUIDELINES.md  REGRESSION_MATRIX.md  RELEASE_PROCESS.md
scripts/: capture-visual-baseline.py  check-about-background-continuity.py  check-about-composition.py  check-about-release-controls.py  check-about-release-interactions.py  check-about-surface-controls.py  check-bulk-menu.py  check-destructive-dialog.py  check-download-panel-parity.py  check-i18n.mjs  check-install-surface-controls.py  check-launcher-background-contract.py  check-launcher-update-safety.py  check-lazy-page-loading.py  check-legacy-shell-parity.py  check-library-card-states.py  check-library-components.mjs  check-library-density.py  check-library-hero-art-parity.py  check-library-hero-layers.py  check-library-performance.py  check-library-surface-controls.py  check-light-palette.py  check-release-selector-layout.py  check-release.ps1  check-repo-action-menu.py  check-select-controls.py  check-settings-composition.py  check-state-panel-parity.py  check-theme-contrast.mjs  (+2 more)
src/: App.css  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: download.rs  favorites.rs  github.rs  installed.rs  library_folders.rs  mod.rs  project_art.rs  settings.rs  updates.rs
src-tauri/src/download/: extractor.rs  manager.rs  mod.rs
src-tauri/src/github/: api.rs  assets.rs  cache.rs  mod.rs  models.rs
src-tauri/src/storage/: favorites.rs  installed.rs  library_folders.rs  logs.rs  mod.rs  path_scope.rs  project_art.rs  secret_store.rs  settings.rs
src-tauri/src/version/: checker.rs
(+99 files in other folders)
