[package]
name = "app"
version = "5.12.0"
description = "Pullora - GitHub program launcher"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["sync", "rt", "time", "fs", "io-util", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
zip = "2"
futures-util = "0.3"
base64 = "0.22"
keyring = "4.1.5"
sha2 = "0.11.0"
